Volume pill spacing issues
* Use tabular font (not sold on this)
* Spacing between elements is now visually consistent

--- a/config/style.css
+++ b/config/style.css
@@ -233,8 +233,8 @@ window {
 
 .time-pill {
   min-height: 28px;
-  /*padding-left: 8px;
-  padding-right: 8px;*/
+  padding-left: 8px;
+  padding-right: 8px;
 
   background-color: var(--ctp-base);
   border: 2px solid var(--ctp-overlay1);
@@ -244,6 +244,7 @@ window {
 
 .time-pill label {
   color: var(--ctp-text);
+  font-variant-numeric: tabular-nums;
 }
 
 /* Time popover */
